smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-trait-member-names.errors
[ERROR] -: Parse error at line 5, column 19 near `, | Model
