smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-trait-member-names.smithy
namespace com.foo

@deprecated(
    message: "Foo",
    message: "Foo",
)
structure Foo {}
